--- a/change2twin/цілі.md
+++ b/change2twin/цілі.md
@@ -209,6 +209,6 @@
 Приклади застосувань
 
 - **Servitization**: Продаж продукту як  послуги вимагає розумного пристрою, здатного звітувати про себе     
-- **Twin of the device**: Продаж  близнюка разом з товаром дозволить клієнту використовувати модель у власних  цілях     
+- **Twin of the device**: Продаж  двійника разом з товаром дозволить клієнту використовувати модель у власних  цілях     
 - **Twin of material**:  Продаж інформації разом із матеріалом дозволить користувачеві краще  застосовувати матеріал у процесі, наприклад якісну інформацію     
 - **Services**: Продаж  додаткових послуг на базі двійника продукту
